@@ -2252,6 +2252,95 @@ OK
             </para>
           </listitem>
         </varlistentry>
+
+        <varlistentry id="command_tagtypes">
+          <term>
+            <cmdsynopsis>
+              <command>tagtypes</command>
+            </cmdsynopsis>
+          </term>
+          <listitem>
+            <para>
+              Shows a list of available tag types.  It is an
+              intersection of the <varname>metadata_to_use</varname>
+              setting and this client's tag mask.
+            </para>
+
+            <para>
+              About the tag mask: each client can decide to disable
+              any number of tag types, which will be omitted from
+              responses to this client.  That is a good idea, because
+              it makes responses smaller.  The following
+              <command>tagtypes</command> sub commands configure this
+              list.
+            </para>
+          </listitem>
+        </varlistentry>
+
+        <varlistentry id="command_tagtypes_disable">
+          <term>
+            <cmdsynopsis>
+              <command>tagtypes</command>
+              <arg choice="plain">disable</arg>
+              <arg choice="req" rep="repeat"><replaceable>NAME</replaceable></arg>
+            </cmdsynopsis>
+          </term>
+          <listitem>
+            <para>
+              Remove one or more tags from the list of tag types the
+              client is interested in.  These will be omitted from
+              responses to this client.
+            </para>
+          </listitem>
+        </varlistentry>
+
+        <varlistentry id="command_tagtypes_enable">
+          <term>
+            <cmdsynopsis>
+              <command>tagtypes</command>
+              <arg choice="plain">enable</arg>
+              <arg choice="req" rep="repeat"><replaceable>NAME</replaceable></arg>
+            </cmdsynopsis>
+          </term>
+          <listitem>
+            <para>
+              Re-enable one or more tags from the list of tag types
+              for this client.  These will no longer be hidden from
+              responses to this client.
+            </para>
+          </listitem>
+        </varlistentry>
+
+        <varlistentry id="command_tagtypes_clear">
+          <term>
+            <cmdsynopsis>
+              <command>tagtypes</command>
+              <arg choice="plain">clear</arg>
+            </cmdsynopsis>
+          </term>
+          <listitem>
+            <para>
+              Clear the list of tag types this client is interested
+              in.  This means that <application>MPD</application> will
+              not send any tags to this client.
+            </para>
+          </listitem>
+        </varlistentry>
+
+        <varlistentry id="command_tagtypes_all">
+          <term>
+            <cmdsynopsis>
+              <command>tagtypes</command>
+              <arg choice="plain">all</arg>
+            </cmdsynopsis>
+          </term>
+          <listitem>
+            <para>
+              Announce that this client is interested in all tag
+              types.  This is the default setting for new clients.
+            </para>
+          </listitem>
+        </varlistentry>
       </variablelist>
     </section>
 
@@ -2407,18 +2496,6 @@ OK
             <para>
               Shows which commands the current user does not have
               access to.
-            </para>
-          </listitem>
-        </varlistentry>
-        <varlistentry id="command_tagtypes">
-          <term>
-            <cmdsynopsis>
-              <command>tagtypes</command>
-            </cmdsynopsis>
-          </term>
-          <listitem>
-            <para>
-              Shows a list of available song metadata.
             </para>
           </listitem>
         </varlistentry>
