@@ -1,4 +1,6 @@
 ver 0.21 (not yet released)
+* protocol
+  - "tagtypes" can be used to hide tags
 
 ver 0.20.5 (not yet released)
 * tags
